<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--    练习绘制页面-->
    <string name="draw_1_1" translatable="false">1.1 BaseApi</string>
    <string name="draw_paint_effect" translatable="false">1.2 Paint(效果)</string>
    <string name="draw_paint_color" translatable="false">1.2 Paint(基本颜色)</string>
    <string name="draw_paint_init" translatable="false">1.2 Paint(初始化)</string>
    <string name="draw_text" translatable="false">1.3 Paint(Text)</string>
    <string name="draw_api_canvas" translatable="false">1.4 画布练习</string>

    <!--Glide 效果测试页面-->
    <string name="glide_circle" translatable="false">Glide预览</string>
    <string name="glide_round" translatable="false">round</string>
    <string name="glide_blur" translatable="false">blur</string>
    <string name="glide_round_with_border" translatable="false">round_with_border</string>
    <string name="glide_load_fade" translatable="false">load_fade</string>

    <!--PhotoView 效果测试页面-->
    <string name="transition_test" translatable="false">test</string>
    <string name="photo_view_sample" translatable="false">PhotoView Sample</string>
    <string name="menu_zoom_enable" translatable="false">Enable Zoom</string>
    <string name="menu_zoom_disable" translatable="false">Disable Zoom</string>
    <string name="menu_scale_fit_center" translatable="false">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start" translatable="false">Change to FIT_START</string>
    <string name="menu_scale_fit_end" translatable="false">Change to FIT_END</string>
    <string name="menu_scale_fit_xy" translatable="false">Change to FIT_XY</string>
    <string name="menu_scale_center" translatable="false">Change to CENTER</string>
    <string name="menu_scale_center_inside" translatable="false">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop" translatable="false">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate" translatable="false">Animate scale to random value</string>
    <string name="menu_zoom_random" translatable="false">Set scale to random value</string>
    <string name="menu_matrix_restore" translatable="false">Restore Display Matrix</string>
    <string name="menu_matrix_capture" translatable="false">Capture Display Matrix</string>
    <string name="extract_visible_bitmap" translatable="false">Extract visible bitmap</string>

     <!--Shadow 效果测试页面-->
    <string name="shadow_title" translatable="false">ShadowLayout预览</string>
    <string name="shadow_content" translatable="false">嵌套控件</string>
    <string name="shadow_color_title">阴影颜色(R，G，B):</string>
    <string name="shadow_limit_title">阴影扩撒程度:</string>
    <string name="shadow_offsetx_title">阴影X偏移量:</string>
    <string name="shadow_offsety_title">阴影Y偏移量:</string>
    <string name="shadow_round_title">圆角大小:</string>
    <string name="shadow_alpha_title">透明度:</string>


    <string name="appbarlayout_one_child">AppBarLayout只有1个Child</string>
    <string name="collapseToolBarDemo">滑动时上部分折叠效果</string>

    <!-- BarsLayout 测试页面   -->
    <string name="bars_title">ImmersionBar 效果测试</string>
    <string name="transparent_status_bar">全屏&amp;Bars透明(布局入侵)</string>
    <string name="hide_status_bar">隐藏状态&amp;导航栏</string>
    <string name="change_status_bar_coor">改变Bars颜色同ActionBar</string>
    <string name="change_status_bar_text_coor">Light模式</string>
    <string name="hide_navigation_bar">只隐藏导航栏</string>
    <string name="reset_bars">恢复Bars初始状态</string>
    <string name="change_navigation_bar_coor">改变导航栏颜色</string>

<!--  菜单  -->
    <string name="menu_hsv">HSV</string>
    <string name="menu_color_matrix">Color Matrix</string>
</resources>