<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent"
    tools:ignore="MissingDefaultResource"
    tools:viewBindingIgnore="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/google_green" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/size_28sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:text="@string/bars_title"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/transparent_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/transparent_status_bar"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hide_bars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/hide_status_bar"
        app:layout_constraintStart_toStartOf="@+id/transparent_status"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_bars_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/change_status_bar_coor"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hide_navigation_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="104dp"
        android:text="@string/hide_navigation_bar"
        app:layout_constraintStart_toEndOf="@+id/hide_bars"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_navigation_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/change_navigation_bar_coor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/change_bars_color"
        app:layout_constraintTop_toBottomOf="@+id/hide_navigation_only" />

    <Button
        android:id="@+id/change_state_bar_text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_status_bar_text_coor"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bars_color" />

    <Button
        android:id="@+id/reset_bars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset_bars"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/transparent_status"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

</androidx.constraintlayout.widget.ConstraintLayout>