<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.zeke.demo.shadowlayout.ShadowLayout
        android:id="@+id/shadowLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layoutBackground="@color/gray"
        app:layoutBackground_true="@color/google_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="@dimen/dp_2"
        app:shadowLimit="@dimen/dp_12"
        app:shapeMode="ripple"
        app:shadowColor="@color/google_blue"
        app:strokeColor="@color/google_yellow">

        <TextView
            android:id="@+id/txt_test"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/shadow_content"
            android:textColor="@color/white"/>
    </com.zeke.demo.shadowlayout.ShadowLayout>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/shadowLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_color_title"/>
    <SeekBar
        android:id="@+id/shadow_color_red_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadowLayout"
        android:progress="250"
        android:max="255"/>
    <SeekBar
        android:id="@+id/shadow_color_green_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_red_seekbar"
        android:progress="106"
        android:max="255"/>
    <SeekBar
        android:id="@+id/shadow_color_blue_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_green_seekbar"
        android:progress="33"
        android:max="255"/>

    <TextView
        android:id="@+id/shadow_limit_tip"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_blue_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_limit_title"/>
    <SeekBar
        android:id="@+id/shadow_limit_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_blue_seekbar"
        android:max="100"/>

    <TextView
        android:id="@+id/shadow_offsetx_tip"
        app:layout_constraintTop_toBottomOf="@+id/shadow_limit_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_offsetx_title"/>
    <SeekBar
        android:id="@+id/shadow_color_offsetx_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_limit_seekbar"
        android:max="100"/>
    <TextView
        android:id="@+id/shadow_offsety_tip"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_offsetx_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_offsety_title"/>
    <SeekBar
        android:id="@+id/shadow_color_offsety_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_offsetx_seekbar"
        android:max="100"/>


    <TextView
        android:id="@+id/shadow_round_rect_tip"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_offsety_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_round_title"/>
    <SeekBar
        android:id="@+id/shadow_round_rect_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_color_offsety_seekbar"
        android:max="80"/>
    <TextView
        android:id="@+id/shadow_alpha_tip"
        app:layout_constraintTop_toBottomOf="@+id/shadow_round_rect_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_alpha_title"/>
    <SeekBar
        android:id="@+id/shadow_alpha_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shadow_round_rect_seekbar"
        android:progress="255"
        android:max="255"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/shadow_alpha_seekbar">

        <RadioButton
            android:id="@+id/radio_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hide Left"/>

        <RadioButton
            android:id="@+id/radio_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Top"/>
        <RadioButton
            android:id="@+id/radio_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Right"/>

        <RadioButton
            android:id="@+id/radio_buttom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Buttom"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>